tests done, 10 unit tests created